gitops/mgmt/keycloak/kustomize/base/generated/keycloak/templates/ingress.yaml
---
# Source: keycloak/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: "mgmt-dev"
  labels:
    app.kubernetes.io/instance: keycloak
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/version: 22.0.5
    helm.sh/chart: keycloak-17.3.1
    app.kubernetes.io/component: keycloak
spec:
  ingressClassName: "nginx"
  rules:
    - host: "keycloak.mgmt.cloud.com"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: keycloak
                port:
                  name: http
  tls:
    - name: mgmt-tls
